# MedLitAgent

./: .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  README_WEB.md  USAGE_GUIDE.md  VERSION.md  check_version.py  demo.py  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  test_crawl.py  test_web.py
config/: config.py
data/models/: classifier.pkl  vectorizer.pkl
demo_exports/: demo_report.html
src/: __init__.py
src/api/: app.py
src/crawlers/: arxiv_crawler.py  base_crawler.py  crawler_manager.py  pubmed_crawler.py
src/database/: database_manager.py  models.py
src/nlp/: keyword_extractor.py  text_classifier.py
src/utils/: export_utils.py
templates/: base.html  crawl.html  dashboard.html  index.html  search.html
